# interview

./: .gitignore  CMakeLists.txt  README.md  book.toml
code/algo/design/c++/: command.cpp  decorate.cpp  factory.cpp  observer.cpp  singleton.cpp  strategy.cpp
code/algo/getoffer/c++/: 2matrix_sum.cpp  CMakeLists.txt  allch_short_substr.cpp  bitcount.cpp  bstradd.cpp  check_delone_palindrome.cpp  check_nosort_substr.cpp  (+16 more)
code/linuxsystem/stat/: CMakeLists.txt  getcpu.cpp  getdisk.cpp  getmem.cpp
code/standalone/c++/: CMakeLists.txt  bank.cpp  consistenthash.cpp  memorypool.cpp  runestr.cpp  senseword.cpp  tasktimer.cpp  todolist.cpp  topk_skiplist.cpp  wordcount.cpp
public/code/algo/: algo.cpp  array.cpp  linklist.cpp  lru.cpp  queue.cpp
public/quiz/c++/: 1.toml
src/: SUMMARY.md
src/c++/: c++标准.md  lambda表达式.md  readme.md  static.md  stl容器库.md  什么是指针.md  什么是虚函数.md  关键字.md  内存模型.md  如何保证并发安全.md  常用库函数.md  常见对象的内存结构.md  引用变量.md  指针.md  数据类型.md  模板编程.md  生命周期.md  移动语义.md  编译期优化.md  面向对象.md
src/c++/实战/: bank.md  readme.md  todo列表.md  wordcount.md  任务定时器.md  敏感词过滤.md
src/linux操作系统/: cpu资源.md  readme.md  内存管理.md  内存资源.md  常用操作.md  磁盘资源.md  网络配置.md  资源管理.md  进程结构与调度.md  进程间通信.md
src/中间件/mysql/: readme.md
src/中间件/redis/: readme.md
src/操作系统/: README.md
src/数据结构/: 座位预约管理系统.md  朋友圈时间线功能.md  短链系统设计.md  缓存系统.md
src/数据结构与算法/: 算法.md
src/数据结构与算法/寻路场景/: readme.md  网格路径.md
src/数据结构与算法/设计模式/: 单例模式.md  命令模式.md  工厂模式.md  策略模式.md  装饰器模式.md  观察者模式.md
src/数据结构与算法/题库/: 剑指offer1.md  剑指offer2.md  剑指offer3.md  剑指offer4.md
src/系统架构/: readme.md
testdata/: word.txt
(+218 files in other folders)
