project(getoffer)

add_executable(todolist todolist.cpp)
add_executable(wordcount wordcount.cpp)
add_executable(bank bank.cpp)
add_executable(senseword senseword.cpp)
add_executable(tasktimer tasktimer.cpp)
add_executable(runestr runestr.cpp)
add_executable(consistenthash consistenthash.cpp)
add_executable(topk_skiplist topk_skiplist.cpp)
add_executable(memorypool memorypool.cpp)
